--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <div style="position: absolute; bottom: 0; left: 0; background-color: red; padding: 30; color: white;">
-        About this visulization
+    <div class="center" id="loading">
+        Loading.... This might take a few seconds while the browser loads csv data
     </div>
     <div class="reveal" style="display: none;">
+        <button onclick="goToAbout()" style="z-index:99; font-size: 15; position: absolute; bottom: 0; left: 0; background-color: red; height:75; width:250; color: white;">
+            About this visualization
+        </button>
         <div class="slides">
             <section>
                 <div class="container-fluid">
@@ -25,25 +28,25 @@
                         <div class="col-sm-3">
                             <h5 style="font-size: 16;">Summary</h5>
                             <p style="font-size: 14; text-align: left;">
-                                This visulization uses data from
+                                This visualization uses data from
                                 <a href="https://en.wikipedia.org/wiki/Justin_Verlander">
-                                Justin Verlander </a>
+                                    Justin Verlander </a>
                                 a MLB (
                                 <a href="https://en.wikipedia.org/wiki/Major_League_Baseball">Major League Baseball </a>) pitcher.
                             </p>
                             <p style="font-size: 14; text-align: left;">
-                                The main purpose of this visulization is to walk through Justin Verlander's pitching career and break down
+                                The main purpose of this visualization is to walk through Justin Verlander's lifetime pitching data and break down
                                 <ul>
                                     <li style="font-size: 14; text-align: left;">What types of pitches he throws</li>
                                     <li style="font-size: 14; text-align: left;">What is his main dominant pitch</li>
-                                    <li style="font-size: 14; text-align: left;">Visulize strike out data by pitch type and location</li>
+                                    <li style="font-size: 14; text-align: left;">Visualize strike out data by pitch type and location</li>
                                 </ul>
                             </p>
                         </div>
                         <div class="col-sm-3 ml-4">
                             <h5 style="font-size: 16;">Dataset</h5>
                             <p style="font-size: 14; text-align: left;">
-                                The main purpose of this visulization is to walk through Justin Verlander's pitching career and break down
+                                The main purpose of this visualization is to walk through Justin Verlander's pitching career and break down
 
                             </p>
                         </div>
@@ -78,13 +81,13 @@
                     <div class="container-fluid">
                         <h5 style="font-size: 18;">Pitch Type Breakdown By Year</h5>
                         <div class="row justify-content-md-center">
-                            <div class="col-sm-3">
+                            <div class="col-sm-2">
                                 <p style="font-size: 14; text-align: left;"> Early in his career he starts with just the fastball, curveball, and changeup</p>
                                 <p style="font-size: 14; text-align: left;"> As his career progressed he added a slider, and in the last two years, relies less on the
                                     change up</p>
                             </div>
-                            <div class="ml-5 col-sm-4">
-                                <svg id="graph1a" height=400 width=650></svg>
+                            <div class="ml-4 col-sm-4">
+                                <svg id="graph1a" height=300 width=570></svg>
                             </div>
 
                         </div>
@@ -145,7 +148,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-2 mr-5">
                                 <div class="row">
                                     <p class="small-font">Game Event</p>
                                 </div>
@@ -159,12 +162,22 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="col-md-2">
+                                <div class="row">
+                                    <p class="small-font">Batter Stance</p>
+                                </div>
+                                <div class="row">
+                                    <select id="batterStanceSlt" class="form-control small-select">
+                                        <option selected value="A">All</option>
+                                        <option value="L">L</option>
+                                        <option value="R">R</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                         <div class="row justify-content-md-center">
-                            <div class="col-xs-2">
-                                <p class="small-font"> Text here about the thing</p>
-                            </div>
-                            <div class="ml-5 col-xs-4">
+
+                            <div class="col-xs-4">
                                 <div id="graph4"> </div>
                             </div>
 
@@ -174,8 +187,35 @@
 
             </section>
             <section>
-                <section>Vertical Slide 1</section>
-                <section>Vertical Slide 2</section>
+                <section>
+                    <div class="container-fluid">
+                        <h5 style="font-size: 18;">About This Visualization</h5>
+                        <div class="row justify-content-md-center my-3">
+                            <div class="col-sm-6">
+                                <p style="font-size: 14; text-align: left;">
+                                    This visualization is an interactive slide show, where each scene displays a graph
+                                    and as you progress throw the slide show it goes into more detail.
+                                </p>
+                                <p style="font-size: 14; text-align: left;">
+                                    Each scene has a graph and some text explaining some insight from the graph.
+                                </p>
+                                <p style="font-size: 14; text-align: left;">
+                                    Each graph has some text explaining the graph, and the ERA vs Fastball graph has an
+                                    annotation explaining a key point in the graph.
+                                </p>
+                                <p style="font-size: 14; text-align: left;">
+                                    Parameters on used in the last two graphs. Strikes outs over years graph allows
+                                    you to go forward and backward in time to see the strikeouts over the years.
+                                    The last graph allows you to adjust the year, event type and batter stance to get a view
+                                    of the different results of different pitches.
+                                </p>
+                                <p style="font-size: 14; text-align: left;">
+                                    Triggers stuff goes here
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
             </div>
             </div>
@@ -183,8 +223,6 @@
 
             <script src="js/d3.min.js"></script>
             <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
                 crossorigin="anonymous"></script>
             <script src="js/pitchesBubbleGraph.js"></script>
             <script src="js/statLineGraph.js"></script>
