--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <div class="slides">
             <section>
                 <div class="container-fluid">
-                    <h5 style="font-size: 18;">Justin Verlander MLB Pitch Data Visulization</h5>
+                    <h5 style="font-size: 18;">Justin Verlander (JV) MLB Pitch Data Visualization</h5>
                     <div class="row justify-content-md-center my-5">
                         <div class="col-sm-3">
                             <h5 style="font-size: 16;">Summary</h5>
                             <p style="font-size: 14; text-align: left;">
                                 This visualization uses data from
                                 <a href="https://en.wikipedia.org/wiki/Justin_Verlander">
-                                    Justin Verlander </a>
+                                    Justin Verlander (JV) </a>
                                 a MLB (
                                 <a href="https://en.wikipedia.org/wiki/Major_League_Baseball">Major League Baseball </a>) pitcher.
                             </p>
@@ -42,9 +42,7 @@
                                     <li style="font-size: 14; text-align: left;">Visualize strike out data by pitch type and location</li>
                                 </ul>
                             </p>
-                            <p style="font-size: 14; text-align: left;">
-                                To navigate you can click the right arrow in the bottom corner. Some slides you can go down to drill into the data further.
-                            </p>
+
                         </div>
                         <div class="col-sm-3 ml-4">
                             <h5 style="font-size: 16;">Dataset</h5>
@@ -58,9 +56,11 @@
                         </div>
                         <div class="col-sm-3 ml-4">
                             <h5 style="font-size: 16;">Special Terms</h5>
-                            <p style="font-size: 14; text-align: left;">ERA: </p>
-                            <p style="font-size: 14; text-align: left;"></p>
-                            <p style="font-size: 14; text-align: left;"></p>
+                            <p style="font-size: 14; text-align: left;">ERA: The number of runs given up per 9 innings pitched.</p>
+                            <h5 style="font-size: 16;">Visualization Details</h5>
+                            <p style="font-size: 14; text-align: left;">
+                                To navigate you can click the right arrow in the bottom corner. Some slides you can go down to drill into the data further.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -88,9 +88,10 @@
                         <h5 style="font-size: 18;">Pitch Type Breakdown By Year</h5>
                         <div class="row justify-content-md-center">
                             <div class="col-sm-2">
-                                <p style="font-size: 14; text-align: left;"> Early in his career he starts with just the fastball, curveball, and changeup</p>
-                                <p style="font-size: 14; text-align: left;"> As his career progressed he added a slider, and in the last two years, relies less on the
-                                    change up</p>
+                                <p style="font-size: 14; text-align: left;"> Early in his career he focuses on the fastball, curveball, and changeup</p>
+                                <p style="font-size: 14; text-align: left;"> As his career progressed he started throwing the slider more, and in the last two years,
+                                    starts throwing the changeup less
+                                </p>
                             </div>
                             <div class="ml-4 col-sm-4">
                                 <svg id="graph1a" height=300 width=570></svg>
@@ -103,14 +104,14 @@
             </section>
             <section>
                 <div class="container-fluid">
-                    <h5 style="font-size: 18;">ERA/WHIP vs Fastball Velocity</h5>
+                    <h5 style="font-size: 18;">ERA vs Fastball Velocity</h5>
                     <div class="row justify-content-md-center">
                         <div class="col-sm-3">
                             <p style="font-size: 14; text-align: left;">
                                 Justin Verlander is a power pitcher and relies on his fastball for his dominance
                             </p>
                             <p style="font-size: 14; text-align: left;">
-                                We can see that when his fastball velocity dipped for a few season it caused his ERA to go up.
+                                We can see that when his fastball velocity dipped for a few season it caused his ERA (number of runs allowed per 9 innings pitched) to go up.
                             </p>
                         </div>
                         <div class="ml-5 col-sm-4">
@@ -192,7 +193,9 @@
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
-
+                            <div class="col-md-2">
+                                <p class="small-font">Now we can breakdown JV's pitches even further using game event, year, and batter stance.</p>
+                            </div>
                             <div class="col-xs-4">
                                 <div id="graph4"> </div>
                             </div>
@@ -210,21 +213,20 @@
                             <div class="col-sm-6">
                                 <p style="font-size: 14; text-align: left;">
                                     This visualization is an interactive slide show, where each scene displays a graph and as you progress throw the slide show
-                                    it goes into more detail. Navigation is in the bottom right hand corner, and you can go forward, backwards, and on some slides (1, 3) you can
-                                    even go down and up.
+                                    it goes into more detail. Navigation is in the bottom right hand corner, and you can
+                                    go forward, backwards, and on some slides (2, 4) you can even go down and up.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
-                                    Each scene has a graph and some text explaining some insight from the graph. All scenes data is cleared
-                                    when you click the arrow at the bottom to go to the next slide.
+                                    Each scene has a graph and some text explaining some insight from the graph. Transitioning from scene to scene will display a new graph.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
-                                    For annotations each graph has some text explaining the graph, and the ERA vs Fastball graph has an annotation explaining a key point in
-                                    the graph.
+                                    For annotations each graph has some text explaining the graph, and the ERA vs Fastball graph has an annotation explaining
+                                    a key point in the graph.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
-                                    Parameters on used in the last two graphs. Strikes outs over years graph allows you to go forward and backward in time to
-                                    see the strikeouts over the years. The last graph allows you to adjust the year, event
-                                    type and batter stance to get a view of the different results of different pitches.
+                                    Visualization parameters are used in the last two graphs. The Strikeouts per Year graph allows you to go forward and backward in time to
+                                    see the strikeouts over the years and this adjusts the year parameter. The Individual Pitch Analysis allows you to adjust the year, event
+                                    type and batter stance to drill down into the data even more.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
                                     The main triggers are mouse over events to show tool tips for details on demand. In the individual pitch visualization, the
@@ -240,11 +242,16 @@
                                     <p style="font-size: 14; text-align: left;">
                                         All Charts expect Fastball vs ERA over time support mouse over events on data items to show tooltips</p>
                                     <p style="font-size: 14; text-align: left;">
-                                        The strikeouts over time has a button click event which changes strikeout data over time. This changes
-                                    the year parameter over time.</p>
+                                        The strikeouts over time has a button click event which changes strikeout data over time. This changes the year parameter
+                                        over time.</p>
                                     <p style="font-size: 14; text-align: left;">
                                         The individual pitch analysis allows users to select three parameters from a dropdown: Year, Game Event, and Batter Stance.
                                     </p>
+                                </p>
+                                <p>
+                                    <button style="font-size: 14;" onclick="goToStart()">
+                                        Go To Start
+                                    </button>
                                 </p>
                             </div>
                         </div>
