--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                                 The main purpose of this visualization is to walk through Justin Verlander's lifetime pitching data and break down
                                 <ul>
                                     <li style="font-size: 14; text-align: left;">What types of pitches he throws</li>
-                                    <li style="font-size: 14; text-align: left;">What are his dominant pitches</li>
                                     <li style="font-size: 14; text-align: left;">Visualize strike out data by pitch type and location</li>
+                                    <li style="font-size: 14; text-align: left;">Breakdown pitches over time and game events</li>
                                 </ul>
                             </p>
 
