--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/grid.min.css">
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/reveal.css">
@@ -263,8 +262,7 @@
             <script src="js/reveal.js"></script>
 
             <script src="js/d3.min.js"></script>
-            <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
+            <script src="js/jquery.min.js"></script>
             <script src="js/pitchesBubbleGraph.js"></script>
             <script src="js/statLineGraph.js"></script>
             <script src="js/stackedBarPitchesByYear.js"></script>
