--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <div class="row justify-content-md-center my-3">
                             <div class="col-sm-6">
                                 <p style="font-size: 14; text-align: left;">
-                                    This visualization is an interactive slide show, where each scene displays a graph and as you progress throw the slide show
+                                    This visualization is an interactive slide show, where each scene displays a graph and as you progress through the slide show
                                     it goes into more detail. Navigation is in the bottom right hand corner, and you can
                                     go forward, backwards, and on some slides (2, 4) you can even go down and up.
                                 </p>
