--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                                     go forward, backwards, and on some slides (2, 4) you can even go down and up.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
-                                    Each scene has a graph and some text explaining some insight from the graph. Transitioning from scene to scene will display a new graph.
+                                    Each scene has a graph and text explaining some insight from the graph. Transitioning from scene to scene will display a new graph.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
-                                    For annotations each graph has some text explaining the graph, and the ERA vs Fastball graph has an annotation explaining
+                                    For annotations each graph has text explaining the graph, and the ERA vs Fastball graph has an annotation explaining
                                     a key point in the graph.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
