--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 Justin Verlander is a power pitcher and relies on his fastball for his dominance
                             </p>
                             <p style="font-size: 14; text-align: left;">
-                                We can see that when his fastball velocity dipped for a few season it caused his ERA (number of runs allowed per 9 innings pitched) to go up.
+                                We can see that when his fastball velocity dipped for a few seasons it caused his ERA (number of runs allowed per 9 innings pitched) to go up.
                             </p>
                         </div>
                         <div class="ml-5 col-sm-4">
@@ -225,7 +225,7 @@
                                 <p style="font-size: 14; text-align: left;">
                                     Visualization parameters are used in the last two graphs. The Strikeouts per Year graph allows you to go forward and backward in time to
                                     see the strikeouts over the years and this adjusts the year parameter. The Individual Pitch Analysis allows you to adjust the year, event
-                                    type and batter stance to drill down into the data even more.
+                                    type, and batter stance to drill down into the data even more.
                                 </p>
                                 <p style="font-size: 14; text-align: left;">
                                     The main triggers are mouse over events to show tool tips for details on demand. In the individual pitch visualization, the
@@ -239,12 +239,11 @@
                                 <p style="font-size: 14; text-align: left;">
                                     User interface Events:
                                     <p style="font-size: 14; text-align: left;">
-                                        All Charts expect Fastball vs ERA over time support mouse over events on data items to show tooltips</p>
+                                        All charts except Fastball vs ERA Over Time support mouse over events on data items to show tool tips</p>
                                     <p style="font-size: 14; text-align: left;">
-                                        The strikeouts over time has a button click event which changes strikeout data over time. This changes the year parameter
-                                        over time.</p>
+                                        The Strikeouts Over Time has a button click event which changes the year.</p>
                                     <p style="font-size: 14; text-align: left;">
-                                        The individual pitch analysis allows users to select three parameters from a dropdown: Year, Game Event, and Batter Stance.
+                                        The Individual Pitch Analysis allows users to select three parameters from a dropdown: Year, Game Event, and Batter Stance.
                                     </p>
                                 </p>
                                 <p>
